# gdscript-formatter-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: formatter_manager.rs  main.rs  mcp.rs  protocol.rs  targets.rs
src/tools/: format.rs  lint.rs  mod.rs
