[package]
name = "gdscript-formatter-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.17.1"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
walkdir = "2.5.0"
globset = "0.4.15"
